[package]
name = "cg-spring-2025"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
itertools = "0.11.0"
libc = "0.2.147"
rand = "0.8.5"
regex = "1.8.4"
time = "0.3.22"
rustc-hash = "2.1.1" # not available in codingame, use here for clarity



